[package]
name = "co-sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
co-node-edge = { path = "../node-edge" }
co-state = { path = "../state" }
co-network = { path = "../co-network" }
futures = { workspace = true }
hyper = { workspace = true }
iroh-api = { path = "../../../github/n0-computer/beetle/iroh-api" }
iroh-embed = { path = "../../../github/n0-computer/beetle/iroh-embed" }
iroh-resolver = { path = "../../../github/n0-computer/beetle/iroh-resolver" }
iroh-rpc-client = { path = "../../../github/n0-computer/beetle/iroh-rpc-client" }
iroh-unixfs = { path = "../../../github/n0-computer/beetle/iroh-unixfs" }
libipld = { workspace = true, features = ["default", "serde-codec"] }
libp2p = { workspace = true, features = ["rendezvous", "tokio"] }
names = "0.14.0"
rxrust = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, optional = true, features = ["macros"] }
tokio-stream = { workspace = true, optional = true }
tracing = { workspace = true }
uuid = { version = "1.2.2", features = ["default", "v4"] }
#rocksdb = { version = "0.20.1" }
#librocksdb-sys = { version = "0.10.0+7.9.2" }

# substrate
sc-cli = { workspace = true }
sc-network = { workspace = true }
sc-service = { workspace = true }

[features]
"default" = ["tokio-runtime"]
"tokio-runtime" = ["tokio", "tokio-stream"]
"futures-runtime" = []
