[package]
name = "co-state"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
async-stream = { workspace = true }
async-trait = { workspace = true }
derive_more = "0.99.17"
futures = { workspace = true }
futures-util = { workspace = true }
quic-rpc = { version = "0.3.1", default-features = false }
rxrust = { version = "1.0.0-beta.6", git = "https://github.com/dkuhnert/rxRust.git", branch = "master", features = [
    "tokio-scheduler",
] }
serde = { workspace = true, features = ["derive"] }
static_assertions = "1.1.0"
tokio = { workspace = true, optional = true }
tokio-stream = { workspace = true, optional = true }
tracing = { workspace = true }

[features]
"default" = ["tokio-runtime"]
"tokio-runtime" = ["tokio", "tokio-stream"]
"futures-runtime" = []
