[package]
name = "tauri-plugin-co-sdk"
version = "0.1.0"
description = "Tauri plugin to access co sdk functionality"
authors = ["you"]
edition = "2021"
rust-version = "1.76"
exclude = ["/examples", "/webview-dist", "/webview-src", "/node_modules"]
links = "tauri-plugin-co-sdk"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
cid = { workspace = true }
co-actor = { path = "../co-actor" }
co-core-co = { path = "../cores/co" }
co-core-membership = { path = "../cores/membership" }
co-core-room = { path = "../cores/room" }
co-log = { path = "../co-log" }
co-messaging = { path = "../co-messaging" }
co-primitives = { path = "../co-primitives" }
co-sdk = { path = "../co-sdk", features = ["tokio-runtime"] }
futures = { workspace = true }
ipld-core = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_ipld_dagcbor = { workspace = true }
serde_json = { workspace = true }
tauri = { version = "2.4.0", default-features = false }
tauri-plugin-shell = "2.2.0"
tauri-utils = { version = "2.3.0" }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true, features = ["sync"] }
tracing = { workspace = true }

[build-dependencies]
tauri-plugin = { version = "2.1.0", features = ["build"] }
