[package]
name = "co-core-board"
version = "0.1.0"
edition = "2021"
rust-version = "1.91"
license = "AGPL-3.0-only"
homepage = "https://www.cokit.org"
repository = "https://github.com/1iolabs/cokit.git"
documentation = "https://www.cokit.org/docs/"
description = "Kanban Board Core."

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
cid = { workspace = true }
co-api = { workspace = true }
futures = { workspace = true }
ipld-core = { workspace = true }
num-rational = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_repr = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[features]
"core" = []
